# autocomplete-alternative

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.agents/skills/: orchestration
.claude/skills/: checkpoint  tdd  web-discovery
archive/: autocomplete-engine-mvp-plan-2026-05-28.json
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-181057-106563-6299/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-181446-111435-28892/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-181917-118222-8766/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-181917-118227-12638/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-181917-118448-11887/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-181917-118459-4118/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-183827-146488-27487/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-184835-185799-28145/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-185858-204695-2247/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-190854-216157-10590/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-221253-336299-29709/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-221455-338638-5278/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-222201-344813-12577/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-222722-354882-6966/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-223609-369759-7168/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-224523-383541-28789/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-225213-393537-14726/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-225626-398279-20752/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-230004-402365-26719/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-231331-420589-22439/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-231832-425665-21005/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-233119-446866-6046/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-233604-452547-13187/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-234842-466506-5036/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260528-235325-471459-30038/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-000039-479706-15612/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-000613-485674-15417/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-001443-494696-9610/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-003637-518184-12550/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-003943-523550-22774/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-004205-526644-28479/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-005043-538032-19183/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-010939-562764-15306/: metadata.txt  run-worker.sh
archive/.pi-workers-2026-05-28.2/pi-worker-20260529-013104-597862-23441/: metadata.txt  run-worker.sh
archive/orchestration-2026-05-29.1/: next-orchestrator-handoff-2026-05-29.json
clients/: README.md  package.json
clients/obsidian/: main.js  manifest.json  package.json  styles.css
clients/obsidian/src/: main.js  (+1 more)
clients/vscode/: package.json
crates/autocomplete-addons/: Cargo.toml
crates/autocomplete-addons/src/: lib.rs
crates/autocomplete-addons/tests/: addon_runtime.rs
crates/autocomplete-core/: Cargo.toml
crates/autocomplete-core/src/: engine.rs  lib.rs  mock.rs  postprocess.rs  provider.rs
crates/autocomplete-core/tests/: engine.rs  postprocessors.rs
crates/autocomplete-protocol/: Cargo.toml  README.md
crates/autocomplete-protocol/src/: lib.rs  schema.rs  types.rs  validation.rs
crates/autocomplete-protocol/tests/: endpoint_response_types.rs  plan_examples.rs  request_fixture.rs  response_fixtures.rs  schema_export.rs  validation.rs
crates/autocomplete-provider-pi/: Cargo.toml
crates/autocomplete-provider-pi/src/: lib.rs  parser.rs  prompt.rs  provider.rs  redaction.rs
crates/autocomplete-provider-pi/tests/: pi_provider.rs
crates/autocomplete-server/: Cargo.toml
crates/autocomplete-server/src/: lib.rs
crates/autocomplete-server/tests/: config_loading.rs  http_endpoints.rs
daily-notes/: 2026-05-28.md  2026-05-29.md  2026-05-30.md
docs/: client-setup.md  limitations-and-next-steps.md  protocol.md
examples/fixtures/: autocomplete-request.v1.json  autocomplete-response-error.v1.json  autocomplete-response-ok.v1.json
issues/: 001-manual-autocomplete-trigger.md  002-partial-accept-next-unit.md  README.md
reports/: autocomplete-engine-mvp-plan-2026-05-28.json  autocomplete-subscription-options-2026-05-28.json
reports/orchestration/: autocomplete-research-state.json
(+87 files in other folders)
