[workspace]
members = [
    "crates/autocomplete-core",
    "crates/autocomplete-protocol",
    "crates/autocomplete-provider-pi",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["uuid1"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
tokio-util = "0.7"
regex = "1"
tracing = "0.1"
jsonschema = "0.33"
pretty_assertions = "1"
tempfile = "3"
