[workspace]
members = [
    "crates/autocomplete-addons",
    "crates/autocomplete-core",
    "crates/autocomplete-protocol",
    "crates/autocomplete-provider-pi",
    "crates/autocomplete-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["uuid1"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
globset = "0.4"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
url = "2"
jsonschema = "0.33"
pretty_assertions = "1"
tempfile = "3"
