[package]
name = "autocomplete-protocol"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
jsonschema.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
