[package]
name = "autocomplete-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
autocomplete-addons = { path = "../autocomplete-addons" }
autocomplete-core = { path = "../autocomplete-core" }
autocomplete-provider-pi = { path = "../autocomplete-provider-pi" }
autocomplete-protocol = { path = "../autocomplete-protocol" }
axum.workspace = true
bytes.workspace = true
clap.workspace = true
config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
bytes.workspace = true
http-body-util.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
tower.workspace = true
